stylesheet.css
:root {
  /* --backgroundColor: #a1d6e2; */
  --backgroundColor: #eeeeee;
  --fontColor: #021c1e;
  --mutedColor: #6c757d;
}

* {
  margin: 0px;
  padding: 0px;
}

body {
  background-color: var(--backgroundColor);
  color: var(--fontColor);
  font-family: "Inter", sans-serif;
  line-height: 24px;
  font-size: 13px;
}

.flex {
  display: flex;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-weight: 600;
}

a {
  text-decoration: none;
  color: inherit;
}

.text-center {
  text-align: center;
}

.displayNone {
  display: none;
}

/* navigation bar */
nav {
  padding: 20px 10px;
}

nav .flex {
  justify-content: space-between;
  align-items: center;
}

nav > .name {
  font-size: 16px;
}

nav > .menu-icon {
  cursor: pointer;
}


.mb-menu {
  display: none;
  position: absolute;
  right: 20px;
  padding: 20px;
  background-color: white;
  border-radius: 8px;
  -webkit-box-shadow: 2px 2px 5px 2px rgb(207, 204, 204);
  -moz-box-shadow: 2px 2px 5px 2px rgb(207, 204, 204);
  box-shadow: 2px 2px 5px 2px rgb(207, 204, 204);
}

.mb-menu ul {
  list-style-type: none;
}

.mb-menu ul li {
  margin: 5px 0px;
}

.showMenu {
  display: block;
}

/* hero section */

.hero-section {
  padding: 20px 10px;
  margin: 50px 0px;
}

.hero-title {
  margin-top: 5px;
  margin-bottom: 5px;
  font-size: 18px;
}

.hero-subtitle {
  margin-top: 10px;
  margin-bottom: 20px;
  font-size: 18px;
}

.hero-description {
  margin-top: 30px;
  margin-bottom: 30px;
  font-size: 16px;
}

.right-side {
  margin-top: 50px;
}

.right-side > h4 {
  margin-bottom: 10px;
}

/* about section */

.about {
  padding: 20px 10px;
  margin: 50px 0px;
}

.about > h2 {
  margin-bottom: 10px;
}

.about > p {
  margin: 10px 0px 10px 10px;
  line-height: 24px;
}

.skill {
  list-style-type: none;
  display: inline-block;
  border: 0.5px solid var(--fontColor);
  border-radius: 10px;
  margin: 4px;
  padding: 8px;
  min-width: 60px;
  text-align: center;
}

.skill:hover {
  background-color: var(--fontColor);
  color: var(--backgroundColor);
}

/* experience */

.work-experience {
  padding: 20px 10px;
  margin: 50px 0px;
}

.work-experience > h2 {
  margin-bottom: 10px;
}

.work-experience .experience {
  margin: 20px 0px 10px 10px;
}

.work-experience > p {
  margin-top: 10px;
  line-height: 24px;
}

.work-experience > ul {
  margin-left: 20px;
}

.work-experience .responsibilites {
  margin: 10px 0px;
}

.work-experience .responsibilites ul {
  margin: 10px 0px 10px 15px;
}

.work-experience .responsibilites ul li {
  margin-top: 5px;
  list-style: circle;
}

/* projects */
.projects {
  padding: 20px 10px;
  margin: 50px 0px;
}

.projects > h2 {
  margin-bottom: 10px;
}

.projects .card {
  margin: 30px 20px;
  border-radius: 10px;
  padding: 20px;
  -webkit-box-shadow: 2px 2px 5px 2px rgb(207, 204, 204);
  -moz-box-shadow: 2px 2px 5px 2px rgb(207, 204, 204);
  box-shadow: 2px 2px 5px 2px rgb(207, 204, 204);
}

.projects .card:hover {
  box-shadow: var(--fontColor) 0px 0px 0px 2px;
}

.card > .card-header {
  font-size: 1.2rem;
}

.card > .card-body {
  margin: 10px 0px;
}

.card-footer {
  font-style: italic;
}

.card-footer svg {
  margin-left: 5px;
  width: 16px;
  height: 16px;
}

/* footer */

footer {
  padding: 20px 10px;
  color: var(--mutedColor);
}

.connect-icons {
  margin-top: 10px;
  margin-bottom: 20px;
}

.connect-icons > a {
  margin-right: 10px;
  color: var(--mutedColor);
}

.connect-icons > a > svg {
  width: 24px;
  height: 24px;
}

.connect-icons > a > svg:hover {
  color: var(--fontColor);
}

.footer-bottom-text {
  margin-top: 10px;
  margin-bottom: 20px;
}

/* ipad view */
@media (min-width: 760px) {
  body {
    font-size: 15px;
    line-height: 28px;
  }

  nav,
  .hero-section,
  .about,
  .work-experience,
  .projects {
    padding: 30px 20px;
  }

  .hero-section {
    display: grid;
    grid-template-columns: 60% 1fr;
    grid-gap: 40px;
  }

  .about .skills-section {
    margin-top: 20px;
  }

  .skill {
    list-style-type: none;
    display: inline-block;
    border: 0.5px solid var(--fontColor);
    border-radius: 8px;
    margin: 8px 5px;
    padding: 8px;
    min-width: 60px;
    text-align: center;
  }
}

/* desktop view */

@media (min-width: 1200px) {
  body {
    max-width: 1100px;
  }
}

